--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dml0YWwtc25hcHBlci05Ny5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_382O4Xb1VDIRlnIeT1nYbFBOJ3FAA49Y5axBWnap2W
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
@@ -8,4 +8,4 @@ NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_URL=/dashboard
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_URL=/dashboard
 
 NEXT_PUBLIC_OPENAI_API_KEY=""
-NEXT_PUBLIC_DATABASE_URL=postgresql://neondb_owner:i8wEoQ5BRbCZ@ep-yellow-block-a1oakd3v.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+NEXT_PUBLIC_DATABASE_URL=
